--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,17 @@ jobs:
         with:
           node-version: '16'
           cache: 'npm'
+          
+      - name: Cache
+        uses: actions/cache@v3.2.3
+        with:
+          path: ./node_modules 
 
       - name: Install dependencies
         run: npm install
 
-      - name: Check for linting errors
-        run: npm test
+#       - name: Check for linting errors
+#         run: npm test
 
       - name: Build production website
         run: npm run build
