--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,11 +7,7 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  deployments: read|write
-  id-token: read|write
-  pages: read|write
+permissions: read-all|write-all
 
 jobs:
   deploy:
