--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   branch: repo
-  repo: shmuelisrl/website
+  repo: "shmuelisrl/website"
 
 publish_mode: editorial_workflow
 media_folder: "static/images/uploads"
